# mutemagic-rs

./: Cargo.toml  README.md  mutemagic.service
doc/: muteme.md
rules.d/: 60-mutemagic.rules
src/: main.rs
