[package]
name = "mutemagic-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
hidapi = "2.6.1"
libspa = "0.8.0"
libspa-sys = "0.8.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["poll"] }
pipewire = "0.8.0"
pretty_env_logger = "0.5.0"
udev = "0.8.0"
